--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,9 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		 <sonar.host.url>http://13.235.94.67:9000/</sonar.host.url>
-		 <sonar.login>bd0f83a083c7cb4bb1e43ec4771c9a51096e05eb</sonar.login>
-		<!--
+		<!-- <sonar.login>bd0f83a083c7cb4bb1e43ec4771c9a51096e05eb</sonar.login> -->
 		<sonar.login>admin</sonar.login>
-		<sonar.password>anoop@4206</sonar.password> -->
+		<sonar.password>anoop@4206</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
