--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		 <sonar.host.url>http://35.154.222.76:9000/</sonar.host.url>
+		 <!-- <sonar.host.url>http://35.154.222.76:9000/</sonar.host.url> -->
 		<!-- <sonar.login>bd0f83a083c7cb4bb1e43ec4771c9a51096e05eb</sonar.login> -->
 		<sonar.login>admin</sonar.login>
 		<sonar.password>anoop@4206</sonar.password> 
