--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<log4j.version>1.2.17</log4j.version>
 	        <sonar.host.url>http://65.1.109.220:9000/</sonar.host.url>
 		<!-- <sonar.login>bd0f83a083c7cb4bb1e43ec4771c9a51096e05eb</sonar.login> -->
-		<sonar.login>admin</sonar.login>
+		<!-- <sonar.login>admin</sonar.login> -->
 		<sonar.password>anoop@4206</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -99,13 +99,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.233.250.75:8081/repository/release/</url>
+	      <url>http://65.1.86.95:8081/repository/release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository</name>
-	      <url>http://13.233.250.75:8081/repository/snapshot/</url>
+	      <url>http://65.1.86.95:8081/repository/snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
